# digestemma

./: cli.py  client.py  main.py  meta.py  pyproject.toml  template.env
.github/workflows/: deploy.yml
clients/: cli.py
lib/: db.py  inference.py  vars.py
lib/functions/: misc.py
