[project]
name = "ollama-llm-project"
version = "0.1.0"
description = "Proyecto de integración con Ollama y PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]